Fix chrome horizontal overflow issue Also, fix landing page section ordering

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -56,7 +56,8 @@ h1 {
 #info {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    /*noinspection CssUnresolvedCustomProperty*/
+    width: calc(100vw - var(--scrollbar-width));
     grid-gap: 5em;
 }
 
