--- a/static/css/set-viewer.css
+++ b/static/css/set-viewer.css
@@ -217,7 +217,8 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100vw;
+    /*noinspection CssUnresolvedCustomProperty*/
+    width: calc(100vw - var(--scrollbar-width));
     background-color: rgba(0,0,0,.75);
     z-index: 1;
     opacity: 0;
